kyverno/restrict-image-registries/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: restrict-image-regisries
  annotations:
    policies.kyverno.io/title: Advanced Restrict Image Registries in CEL expressions
    policies.kyverno.io/category: Other in Vpol
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/minversion: 1.14.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: This policy restricts Pod images to approved registries defined globally in a ConfigMap as a single string, newline-separated list, or YAML list with hyphens, and optionally at the Namespace level via annotations. Uses contains() for compatibility with Kyverno 1.14.0.
spec:
  validationActions:
    - Deny
  evaluation:
    background:
      enabled: false
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
  variables:
    - name: cm
      expression: resource.Get("v1", "configmaps", "default", "cluster-config")
    - name: allContainers
      expression: object.spec.containers + object.spec.?initContainers.orValue([]) + object.spec.?ephemeralContainers.orValue([])
    - name: nsRegistries
      expression: namespaceObject.metadata.?annotations["policy.admin.io/registries"].orValue("").split(",").filter(reg, reg != "")
    - name: clusterRegistries
      expression: variables.cm.data[?'registries'].orValue("").split(",").filter(reg, reg != "")
  validations:
    - expression: |-
        variables.allContainers.all(container, 
          (
            variables.clusterRegistries.exists(registry, container.image.startsWith(registry.trim()))
          ) 
          ||
          (
            variables.nsRegistries.exists(registry, container.image.startsWith(registry.trim()))
          )
        )
      messageExpression: "'This Pod names an image that is not from an approved registry' + variables.nsRegistries.join(',') + '  ' + variables.clusterRegistries.join(',')"
